<?xml version="1.0"?>
<package format="2">
  <name>isr_roscpp</name>
  <version>0.1.0</version>
  <description>Meta-package for isr roscpp library</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>isr_roscpp_core</exec_depend>
  <exec_depend>isr_roscpp_tools</exec_depend>
  <export>
    <metapackage />
  </export>
</package>