<?xml version="1.0"?>
<package format="2">
  <name>isr_roscpp_core</name>
  <version>0.1.0</version>
  <description>The isr_roscpp_core package for ROS1 interface with compact and convenient usage</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

</package>