<?xml version="1.0"?>
<package format="2">
  <name>isr_roscpp_node</name>
  <version>0.1.0</version>
  <description>Meta-package for isr roscpp library</description>
  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>isr_roscpp_core</depend>
  <depend>isr_roscpp_tools</depend>
  <export>
  </export>
</package>