<?xml version="1.0"?>
<package format="2">
  <name>isr_roscpp_tools</name>
  <version>0.0.0</version>
  <description>The isr_roscpp_tools package</description>

  <maintainer email="tre0430@korea.ac.kr">Ikhyeon Cho</maintainer>
  <license>.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>

</package>